--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="reasons-div">
             <div class="reason1 classreason">
                 <div class="reason1-1">
-                    <p id="reasonsp1">Enjoy on your TV</p>
+                    <p id="reasonsp1">Enjoy on your Lap</p>
                     <p id="reasonsp2"> Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
                     <div class="computer">
                         <i class="fa-solid fa-desktop"></i>
